--- a/test.html
+++ b/test.html
@@ -3,215 +3,270 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Chandan Kumar - Data Scientist</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+  <title>Chandan Kumar Resume</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
     :root {
-      --primary: #0A3D62;
-      --accent: #FF9F43;
-      --text: #1A1A1A;
-      --light: #F8F9FA;
-      --border: #E0E0E0;
+      --primary-color: #0D47A1;
+      --secondary-color: #1976D2;
+      --accent-color: #FFCA28;
+      --text-color: #212121;
+      --light-gray: #F5F5F5;
+      --border-color: #E0E0E0;
+      --background-color: #FAFAFA;
     }
 
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
-      font-family: 'Inter', sans-serif;
-      background-color: var(--light);
-      color: var(--text);
+      font-family: 'Roboto', sans-serif;
+      color: var(--text-color);
       line-height: 1.5;
-      font-size: 12px;
+      background-color: var(--background-color);
+      font-size: 13px;
+      font-weight: 400;
     }
-
     .container {
       width: 210mm;
       height: 297mm;
       margin: 0 auto;
-      background: white;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
-      padding: 8mm;
-      border-radius: 10px;
+      background-color: white;
+      box-shadow: 0 6px 24px rgba(0,0,0,0.1);
+      padding: 0 8mm 8mm 8mm;
+      position: relative;
+      overflow: hidden;
+      border-radius: 8px;
     }
-
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 4px 6px;
+      padding: 2px 6px;
       margin-bottom: 6px;
-      border-bottom: 2px solid var(--primary);
+      border-bottom: 2px solid var(--primary-color);
     }
-
     .profile-section {
       display: flex;
       align-items: center;
       gap: 12px;
     }
-
     .profile-image {
-      width: 56px;
-      height: 56px;
+      width: 72px;
+      height: 72px;
       border-radius: 50%;
       overflow: hidden;
-      border: 2px solid var(--border);
+      border: 2px solid var(--border-color);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
-
+    .profile-image img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
     .profile-details {
       display: flex;
       flex-direction: column;
     }
-
     .profile-name {
-      font-size: 16px;
+      font-size: 15px;
       font-weight: 700;
-      color: var(--text);
+      letter-spacing: 0.2px;
+      color: var(--text-color);
     }
-
     .profile-title {
-      font-size: 11px;
-      font-weight: 600;
-      color: var(--accent);
+      font-size: 12px;
+      font-weight: 700;
+      color: var(--accent-color);
     }
-
     .contact-info {
+      display: flex;
+      flex-direction: column;
+      gap: 3px;
       font-size: 10px;
       text-align: right;
     }
-
     .contact-item {
       display: flex;
       align-items: center;
       justify-content: flex-end;
       gap: 4px;
-      margin: 2px 0;
     }
-
     .contact-item .icon {
-      color: var(--primary);
+      color: var(--primary-color);
       font-size: 10px;
     }
+    .contact-item a, .contact-item span {
+      color: var(--text-color);
+      text-decoration: none;
+      font-weight: 700;
+      transition: color 0.3s ease;
+    }
+    .contact-item a:hover { color: var(--accent-color); }
 
     .content {
       display: flex;
       gap: 12px;
-      margin-top: 8px;
+      margin-top: 6px;
     }
-
-    .left-column, .right-column {
-      flex: 1;
-      min-width: 0;
-    }
+    .left-column { flex: 6; }
+    .right-column { flex: 4; }
 
     .section {
       margin-bottom: 10px;
     }
-
     .section-title {
-      font-size: 13px;
+      font-size: 14px;
       font-weight: 700;
-      color: var(--primary);
-      border-bottom: 1px solid var(--border);
-      padding-bottom: 3px;
+      color: var(--primary-color);
+      text-transform: uppercase;
+      border-bottom: 1px solid var(--secondary-color);
+      padding-bottom: 2px;
       margin-bottom: 6px;
+      letter-spacing: 0.5px;
       display: flex;
       align-items: center;
+      background: linear-gradient(to right, var(--primary-color), var(--accent-color));
+      -webkit-background-clip: text;
+      color: transparent;
     }
-
     .section-title i {
-      margin-right: 6px;
+      color: var(--primary-color);
+      margin-right: 1.5mm;
       font-size: 12px;
     }
-
-    .job, .project, .education-item {
+    .job, .education-item, .project {
       margin-bottom: 6px;
     }
-
     .job-title {
-      font-size: 12px;
-      font-weight: 600;
-      color: var(--text);
+      font-size: 13px;
+      font-weight: 700;
+      color: var(--text-color);
+      display: inline-block;
     }
-
-    .company-name {
-      font-style: italic;
+    .school-name, .project-title {
+      font-size: 13px;
+      font-weight: 700;
+      color: var(--text-color);
+    }
+    .project-title .company-name {
       font-weight: 400;
-      color: var(--primary);
-      margin-left: 4px;
+      font-style: italic;
+      color: var(--primary-color);
+      margin-left: 3px;
     }
-
     .job-period {
-      font-size: 11px;
+      display: inline-block;
+      font-weight: 600;
+      font-size: 12px;
       color: #555;
       float: right;
+      margin-left: 5px;
     }
-
+    .education-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+    }
+    .education-details {
+      font-size: 13px;
+      font-weight: 600;
+      color: var(--text-color);
+    }
+    .education-period {
+      font-weight: 600;
+      font-size: 12px;
+      color: #555;
+    }
     ul {
       padding-left: 18px;
-      margin-top: 2px;
+      margin: 3px 0;
     }
-
     li {
       margin-bottom: 3px;
-      font-size: 11px;
+      text-align: justify;
+      list-style-type: "🔹";
+      color: var(--primary-color);
     }
-
+    li::marker {
+      color: var(--primary-color);
+    }
+    p {
+      margin: 3px 0;
+      text-align: justify;
+      font-size: 13px;
+    }
     strong {
-      font-weight: 600;
-      color: var(--text);
+      font-weight: 700;
+      color: var(--text-color);
     }
 
     #downloadButton {
       display: block;
+      width: 200px;
       margin: 15px auto 0;
-      padding: 10px 16px;
-      background: var(--primary);
+      padding: 10px;
+      background-color: var(--primary-color);
       color: white;
-      border: none;
-      border-radius: 6px;
+      text-align: center;
+      border-radius: 4px;
       cursor: pointer;
       font-weight: 600;
-      transition: background 0.3s ease;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      font-size: 14px;
+      border: none;
+      transition: all 0.3s ease;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
     }
-
     #downloadButton:hover {
-      background: #073052;
+      background-color: var(--secondary-color);
+      transform: scale(1.05);
+      box-shadow: 0 6px 15px rgba(0,0,0,0.3);
     }
 
     @media print {
       body { background: none; }
       .container {
         box-shadow: none;
-        padding: 0;
+        margin: 0;
+        padding: 0 8mm 8mm 8mm;
         width: 100%;
+        height: 100%;
       }
       #downloadButton { display: none; }
+      header {
+        border-bottom: 2px solid var(--primary-color);
+      }
+      .contact-item a, .contact-item span { color: var(--text-color); }
+      .profile-title { color: var(--accent-color); }
     }
 
     @media (max-width: 768px) {
       .content { flex-direction: column; }
-      .container { width: 95%; padding: 8px; }
-      .profile-name { font-size: 14px; }
-      .profile-title { font-size: 10px; }
+      .container { width: 95%; }
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 4px;
+        padding: 2px 5px;
+      }
       .contact-info { text-align: left; align-items: flex-start; }
+      .profile-image { width: 60px; height: 60px; }
     }
   </style>
 </head>
 <body>
+  <!-- Resume Content -->
   <div class="container" id="resumeContent">
-    <!-- Header -->
     <header>
       <div class="profile-section">
         <div class="profile-image">
-          <img src="ck.jpg" alt="Chandan Kumar" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';"/>
+          <img src="ck.jpg" alt="Chandan Kumar" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
           <div class="profile-image-fallback">Image Not Available</div>
         </div>
         <div class="profile-details">
           <div class="profile-name">CHANDAN KUMAR</div>
-          <div class="profile-title"><strong>IIT Graduate | Data Scientist | Generative AI Expert</strong></div>
+          <div class="profile-title"><strong>IIT Graduate | Data Scientist</strong></div>
         </div>
       </div>
       <div class="contact-info">
@@ -225,119 +280,82 @@
         </div>
         <div class="contact-item">
           <span class="icon"><i class="fab fa-linkedin-in"></i></span>
-          <a href="https://www.linkedin.com/in/chandaniit" target="_blank">linkedin.com/in/chandaniit</a>
+          <a href="https://www.linkedin.com/in/chandaniit">linkedin.com/in/chandaniit</a>
         </div>
       </div>
     </header>
 
-    <!-- Content -->
     <div class="content">
-      <!-- Left Column -->
       <div class="left-column">
-        <!-- Professional Summary -->
         <div class="section">
-          <div class="section-title"><i class="fas fa-user-tie"></i>Professional Summary</div>
-          <p>IIT Dhanbad graduate with 7+ years of experience driving data science and AI innovation across finance, energy, and environmental sectors. Expertise in Generative AI, MLOps, NLP, and cloud platforms (Azure, AWS, GCP, IBM Watsonx.ai). Proven track record in deploying scalable solutions that reduce costs, automate workflows, and deliver actionable insights.</p>
+          <div class="section-title"><i class="fas fa-user"></i><span>Professional Summary</span></div>
+          <p><strong>IIT graduate</strong> and <strong>Data Scientist</strong> with around <strong>7 years</strong> of expertise in Data Science, AI, and Product Development, specializing in Generative AI, AI governance, and advanced automation. Proven ability to design, deploy, and optimize AI/ML solutions across finance, banking, energy, and environmental sectors, driving business transformation and efficiency.</p>
         </div>
-
-        <!-- Experience -->
         <div class="section">
-          <div class="section-title"><i class="fas fa-briefcase"></i>Experience</div>
+          <div class="section-title"><i class="fas fa-briefcase"></i><span>Experience</span></div>
           <div class="job">
-            <div class="job-title">IBM - Data Scientist <span class="job-period">Mar 2024 - Present</span></div>
+            <div class="job-title"><strong>IBM</strong> - Data Scientist <span class="job-period">Mar 2024 - Present</span></div>
           </div>
           <div class="job">
-            <div class="job-title">Accenture - Data Scientist <span class="job-period">Apr 2021 - Feb 2024</span></div>
+            <div class="job-title"><strong>Accenture</strong> - Data Scientist <span class="job-period">Apr 2021 - Feb 2024</span></div>
           </div>
           <div class="job">
-            <div class="job-title">Capgemini - Process Lead <span class="job-period">Feb 2021 - Mar 2021</span></div>
+            <div class="job-title"><strong>Capgemini</strong> - Process Lead <span class="job-period">Feb 2021 - Mar 2021</span></div>
           </div>
           <div class="job">
-            <div class="job-title">Clean Harbors - Data Scientist <span class="job-period">Jun 2018 - Jan 2021</span></div>
+            <div class="job-title"><strong>Clean Harbors</strong> - Data Scientist <span class="job-period">Jun 2018 - Jan 2021</span></div>
           </div>
         </div>
-
-        <!-- Key Projects -->
         <div class="section">
-          <div class="section-title"><i class="fas fa-project-diagram"></i>Key Projects</div>
+          <div class="section-title"><i class="fas fa-project-diagram"></i><span>Key Projects</span></div>
           <div class="project">
-            <div class="job-title">MARC (Multi-Agent Resource Coordinator) <span class="company-name">IBM</span><span class="job-period">Mar 2024 - Present</span></div>
+            <div class="project-title"><strong>MARC (Multi-Agent Resource Coordinator)</strong>, <span class="company-name">IBM</span></div>
             <ul>
-              <li>Led development of multi-agent workflows for enterprise automation using LLMs.</li>
-              <li>Integrated AI governance frameworks to ensure compliance and ethical behavior.</li>
-              <li>Improved workflow efficiency by 35% through intelligent agent orchestration.</li>
+              <li>Developed and deployed multiple agents for IBM's MARC platform, enhancing multi-agent collaboration and workflow automation.</li>
+              <li>Applied AI Governance principles to ensure ethical and compliant operations of automation agents.</li>
             </ul>
           </div>
           <div class="project">
-            <div class="job-title">PdfGPT for Mizuho Bank <span class="company-name">Accenture</span><span class="job-period">Apr 2021 - Feb 2024</span></div>
+            <div class="project-title"><strong>Mizuho Bank</strong>, <span class="company-name">Accenture</span></div>
             <ul>
-              <li>Created AI-powered summarization tool reducing document review time by 30%.</li>
-              <li>Enabled chat-based PDF interaction for client stakeholders.</li>
+              <li>Developed PdfGPT, an AI-powered text summarization system, reducing document review time by 30%.</li>
             </ul>
           </div>
-          <div class="project">
-            <div class="job-title">Ulster Bank Customer Segmentation <span class="company-name">Accenture</span><span class="job-period">Apr 2021 - Feb 2024</span></div>
-            <ul>
-              <li>Automated ML pipelines for customer segmentation algorithms using Python, Glue, and Athena.</li>
-              <li>Created and validated Data Models, deriving insights for client stakeholders.</li>
-            </ul>
-          </div>
-          <!-- Add remaining projects similarly -->
         </div>
       </div>
 
-      <!-- Right Column -->
       <div class="right-column">
-        <!-- Education -->
         <div class="section">
-          <div class="section-title"><i class="fas fa-graduation-cap"></i>Education</div>
+          <div class="section-title"><i class="fas fa-graduation-cap"></i><span>Education</span></div>
           <div class="education-item">
-            <div class="school-name">IIT Dhanbad - B.Tech</div>
+            <div class="education-details"><strong>IIT Dhanbad</strong> - B.Tech</div>
             <div class="education-period">2013-2017</div>
           </div>
-          <div class="education-item">
-            <div class="school-name">Super30, Patna</div>
-            <div class="education-period">2012-2013</div>
-          </div>
         </div>
-
-        <!-- Certifications -->
         <div class="section">
-          <div class="section-title"><i class="fas fa-certificate"></i>Certifications</div>
+          <div class="section-title"><i class="fas fa-certificate"></i><span>Certifications</span></div>
           <ul>
             <li>Northwestern University - Analytics & AI</li>
-            <li>Stanford - Machine Learning (Coursera)</li>
-            <li>LangChain Academy - LangGraph, LangSmith</li>
-            <li>Hugging Face - AI Agents Fundamentals</li>
-            <li>AWS Certified Cloud Practitioner</li>
-            <!-- Add others... -->
+            <li>Databricks Academy - Generative AI</li>
+            <li>Stanford University - Machine Learning</li>
           </ul>
         </div>
-
-        <!-- Skills -->
         <div class="section">
-          <div class="section-title"><i class="fas fa-tools"></i>Skills</div>
-          <ul>
-            <li><strong>AI/ML:</strong> Generative AI, RAG, LangChain, TensorFlow, PyTorch</li>
-            <li><strong>Cloud:</strong> Azure, AWS, GCP, IBM Watsonx.ai</li>
-            <li><strong>Tools:</strong> Docker, Kubernetes, Git, Power BI</li>
-            <li><strong>Domains:</strong> Finance, Banking, Environmental Tech</li>
-          </ul>
-        </div>
-
-        <!-- Achievements -->
-        <div class="section">
-          <div class="section-title"><i class="fas fa-trophy"></i>Achievements</div>
-          <ul>
-            <li>Top 1% JEE Advanced Qualifier</li>
-            <li>#1 Rank - HackerRank SQL Challenges</li>
-            <li>Recognized for error-free deliveries at Accenture & IBM</li>
-          </ul>
+          <div class="section-title"><i class="fas fa-tools"></i><span>Skills</span></div>
+          <div class="skills-list">
+            <ul>
+              <li><strong>Data Science & AI:</strong> Generative AI, Deep Learning, MLOps, NLP, LangChain, TensorFlow, PyTorch</li>
+              <li><strong>Cloud Platforms:</strong> Azure, AWS, GCP</li>
+              <li><strong>Programming:</strong> Python, SQL</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
   </div>
+
   <button id="downloadButton" onclick="downloadPDF()">Download Resume as PDF</button>
+
   <script>
     async function downloadPDF() {
       const { jsPDF } = window.jspdf;
