--- a/resume1607.html
+++ b/resume1607.html
@@ -308,7 +308,7 @@
       <div class="left-column">
         <div class="section">
           <div class="section-title"><i class="fa-regular fa-address-card"></i><span>Professional Summary</span></div>
-          <p><strong>IIT graduate</strong> and <strong>Data Scientist</strong> with around <strong>7 years</strong> of expertise in delivering AI-driven solutions across finance, banking, energy, and environmental sectors. Skilled in Machine Learning, Deep Learning, Generative AI, LLMs, NLP, RAG, vector databases, and MLOps, with hands-on expertise in Python, TensorFlow, PyTorch, FastAPI, and cloud platforms (AWS, Azure, GCP). Proven ability to design and deploy scalable ML pipelines, working with tools like Databricks, ML Studio, SageMaker, Bedrock, Vertex AI, LangChain, LangGraph, CrewAI, Hugging Face, LlamaIndex, Docker, and Kubernetes. Experienced in building robust ETL workflows and delivering analytics through Tableau and Power BI. Passionate about leveraging AI to drive automation, innovation, and business value.</p>
+          <p><strong>IIT graduate</strong> and <strong>Data Scientist</strong> with around <strong>7 years</strong> of expertise in delivering AI-driven solutions across finance, banking, energy, and environmental sectors. Skilled in Machine Learning, Deep Learning, Generative AI, LLMs, NLP, RAG, vector databases, and MLOps, with hands-on expertise in Python, TensorFlow, FastAPI, and cloud platforms (AWS, Azure, GCP). Proven ability to design and deploy scalable ML pipelines, working with tools like Databricks, ML Studio, SageMaker, Bedrock, Vertex AI, LangChain, LangGraph, CrewAI, Hugging Face, Docker, and Kubernetes. Experienced in building robust ETL workflows and delivering analytics through Tableau and Power BI. Passionate about leveraging AI to drive automation, innovation, and business value.</p>
         </div>
         <div class="section">
           <div class="section-title"><i class="fas fa-briefcase"></i><span>Experience</span></div>
@@ -428,7 +428,7 @@
               <li><strong>Cloud Platforms & Databases:</strong> AWS (Bedrock, SageMaker, Redshift, Athena, S3, EC2, Lambda, EMR, Glue), Azure (Synapse, Databricks, ML Studio), GCP (BigQuery, Vertex AI, Dataflow), Snowflake, PostgreSQL, MySQL, MongoDB, Pinecone, Chroma, Milvus, ETL Pipelines.</li>
               <li><strong>Data Visualization & BI Tools:</strong> Tableau, Power BI, Matplotlib, Seaborn, Plotly,</li>
               <li><strong>Tools, DevOps & Version Control:</strong> Git, GitHub, GitLab, Bitbucket, Docker, Kubernetes, CI/CD for ML Pipelines.</li>
-              <li><strong>Analytics & Business Skills:</strong> Data Wrangling, Feature Engineering, EDA, User Segmentation, Business Intelligence, Product Analytics, Forecasting, System Integration, Workflow Automation</li>
+              <li><strong>Analytics & Business Skills:</strong> Data Wrangling, Feature Engineering, EDA, User Segmentation, Business Intelligence, Product Analytics, Forecasting.</li>
             </ul>
           </div>
         </div>
