--- a/wife_resume.html
+++ b/wife_resume.html
@@ -44,21 +44,23 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 1px 2px;
-      margin-bottom: 1px;
+      padding: 4px 4px;
+      margin-bottom: 3px;
       border-bottom: 1.5px solid var(--primary-color);
+      min-height: 60px;
     }
     .profile-section {
       display: flex;
       align-items: center;
-      gap: 6px;
+      gap: 10px;
     }
     .profile-image {
-      width: 40px;
-      height: 40px;
+      width: 55px;
+      height: 55px;
       border-radius: 50%;
       overflow: hidden;
-      border: 1.5px solid var(--border-color);
+      border: 2px solid var(--primary-color);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
     .profile-image img {
       width: 100%;
@@ -68,33 +70,35 @@
     .profile-image-fallback {
       display: none;
       background-color: var(--light-gray);
-      width: 40px;
-      height: 40px;
+      width: 55px;
+      height: 55px;
       border-radius: 50%;
       text-align: center;
-      line-height: 40px;
-      font-size: 9px;
+      line-height: 55px;
+      font-size: 12px;
       color: #666;
+      font-weight: 500;
     }
     .profile-details {
       display: flex;
       flex-direction: column;
+      gap: 2px;
     }
     .profile-name {
-      font-size: 14px;
+      font-size: 16px;
       font-weight: 700;
-      letter-spacing: 0.2px;
+      letter-spacing: 0.3px;
       color: var(--text-color);
     }
     .profile-title {
-      font-size: 10px;
+      font-size: 11px;
       font-weight: 600;
       color: var(--highlight-color);
     }
     .contact-info {
       display: flex;
       flex-direction: column;
-      gap: 1px;
+      gap: 2px;
       font-size: 9px;
       text-align: right;
     }
@@ -102,11 +106,11 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      gap: 2px;
+      gap: 3px;
     }
     .contact-item .icon {
       color: var(--primary-color);
-      font-size: 9px;
+      font-size: 10px;
     }
     .contact-item a, .contact-item span {
       color: var(--text-color);
@@ -277,12 +281,13 @@
       header {
         flex-direction: column;
         align-items: flex-start;
-        gap: 2px;
-        padding: 1px 2px;
+        gap: 4px;
+        padding: 4px 4px;
+        min-height: 70px;
       }
       .contact-info { text-align: left; align-items: flex-start; }
-      .profile-image { width: 32px; height: 32px; }
-      .profile-image-fallback { width: 32px; height: 32px; line-height: 32px; font-size: 8px; }
+      .profile-image { width: 45px; height: 45px; }
+      .profile-image-fallback { width: 45px; height: 45px; line-height: 45px; font-size: 10px; }
       .certifications-columns { flex-direction: column; }
     }
   </style>
@@ -318,7 +323,7 @@
     <div class="content">
       <div class="section">
         <div class="section-title"><i class="fa-regular fa-address-card"></i><span>Professional Summary</span></div>
-        <p><strong>M.Tech in Data Science</strong> from <strong>IIIT Lucknow</strong>, with around <strong>3 years</strong> of expertise in delivering AI-driven solutions across finance, banking, energy, and environmental sectors. Skilled in Machine Learning, Deep Learning, Generative AI, LLMs, NLP, RAG, vector databases, and MLOps, with hands-on expertise in Python, TensorFlow, FastAPI, and cloud platforms (AWS, Azure, GCP). Proven ability to design and deploy scalable ML pipelines, working with tools like Databricks, ML Studio, SageMaker, Bedrock, Vertex AI, LangChain, LangGraph, CrewAI, Hugging Face, Docker, and Kubernetes. Experienced in building robust ETL workflows and delivering analytics through Tableau and Power BI. Passionate about leveraging AI to drive automation, innovation, and business value.</p>
+        <p><strong>M.Tech in Data Science</strong> from <strong>IIIT Lucknow</strong>, with around <strong>3 years</strong> of expertise in delivering AI-driven solutions across finance, banking and environmental sectors. Skilled in Machine Learning, Deep Learning, Generative AI, LLMs, NLP, RAG, vector databases, and MLOps, with hands-on expertise in Python, TensorFlow, FastAPI, and cloud platforms (AWS, Azure, GCP). Proven ability to design and deploy scalable ML pipelines, working with tools like Databricks, ML Studio, SageMaker, Bedrock, Vertex AI, LangChain, LangGraph, CrewAI, Hugging Face, Docker, and Kubernetes. Experienced in building robust ETL workflows and delivering analytics through Tableau and Power BI. Passionate about leveraging AI to drive automation, innovation, and business value.</p>
       </div>
       <div class="section">
         <div class="section-title"><i class="fas fa-graduation-cap"></i><span>Education</span></div>
