--- a/wife_resume.html
+++ b/wife_resume.html
@@ -297,22 +297,22 @@
     <header>
       <div class="profile-section">
         <div class="profile-image">
-          <img src="AR.jpg" alt="Anjali Rani" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+          <img src="ARY.jpg" alt="Anjali Rani" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
           <div class="profile-image-fallback">Image Not Available</div>
         </div>
         <div class="profile-details">
           <div class="profile-name">ANJALI RANI</div>
-          <div class="profile-title"><strong>Data Scientist & Machine Learning Engineer</strong></div>
+          <div class="profile-title"><strong>IIIT Lucknow | M.Tech | Data Scientist |Ex-TCS | Ex-AMD </strong></div>
         </div>
       </div>
       <div class="contact-info">
         <div class="contact-item">
-          <span class="icon"><i class="fas fa-envelope"></i></span>
-          <a href="mailto:anjalirani.iiit@gmail.com">anjalirani.iiit@gmail.com</a>
-        </div>
-        <div class="contact-item">
           <span class="icon"><i class="fas fa-phone"></i></span>
           <span>+91-8688841302</span>
+        </div>
+        <div class="contact-item">
+          <span class="icon"><i class="fas fa-envelope"></i></span>
+          <a href="mailto:anjalirani.iiit@gmail.com">anjalirani.iiit@gmail.com</a>
         </div>
         <div class="contact-item">
           <span class="icon"><i class="fab fa-linkedin-in"></i></span>
