--- a/try.html
+++ b/try.html
@@ -325,7 +325,7 @@
       width: 200px; 
       margin: 12px auto; 
       padding: 8px 16px; 
-      background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
+      background: var(--primary-color);
       color: white; 
       text-align: center; 
       border-radius: 6px; 
@@ -334,12 +334,11 @@
       font-size: 11px; 
       border: none; 
       transition: all 0.3s ease; 
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
     
     #downloadButton:hover { 
-      transform: translateY(-2px); 
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      background: var(--secondary-color);
+      transform: translateY(-1px); 
     }
     
     /* Print Styles */
@@ -606,10 +605,16 @@
         element.style.position = 'absolute';
         element.style.left = '0';
         const canv = await html2canvas(element, { 
-          scale: 3, 
+          scale: 2, 
           useCORS: true, 
-          windowWidth: window.innerWidth,
-          backgroundColor: '#ffffff'
+          allowTaint: true,
+          backgroundColor: '#ffffff',
+          scrollX: 0,
+          scrollY: 0,
+          windowWidth: 800,
+          windowHeight: 1100,
+          removeContainer: false,
+          logging: false
         });
         const imgWidth = 210;
         const imgHeight = canv.height * imgWidth / canv.width;
